[project]
name = "energon_prometheus_exporter"
version = "0.0.6"
authors = [
  { name="Matteo Mendula", email="mattemendu@gmail.com" },
]
dependencies = [
	"prometheus_client==0.17.0",
	"PyBluez>=0.20",
]
description = "Energon is a Prometheus compliant system monitoring tools, it focuses on the energy consumption and resource usage in constrained devices but it integrates reporting tools for desktop machine, too."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MatteoMendula/Energon_Prometheus_exporter"
"Bug Tracker" = "https://github.com/MatteoMendula/Energon_Prometheus_exporter/issues"
